# teleop_ardrone

./: CHANGELOG.rst  CMakeLists.tx  CMakeLists.txt  README.md  README.md~  package.xml  package.xml~  teleop_ardrone_keyboard.kdev4  teleop_ardrone_keyboard.py
.kdev4/: teleop_ardrone_keyboard.kdev4
launch/: ar_pose_single_drone.launch  teleop_3d.launch  teleop_ardrone_keyboard.launch  teleop_husky.launch  teleop_kb.launch
src/: camera_recorder.py  teleop_ardrone_keyboard.py  teleop_ardrone_keyboard_coop.py  teleop_ardrone_spacenav.cpp  teleop_husky.py  teleop_spacenav_vislab.cpp  teleop_vislab.py
