<?xml version="1.0"?>
<package>
  <name>teleop_ardrone_keyboard</name>
  <version>0.8.0</version>
  <description>Generic keyboard teleop for ardrone robot based.</description>

  <maintainer email="namniart@gmail.com">Austin Hendrix - Twist teleop</maintainer>
  <maintainer email="namniart@gmail.com">Riccardo Polvara - ARdrone teleop</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/teleop_twist_keyboard</url>

  <author>Graylin Trevor Jay</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
